Parameterized nswag, editorconfig
